--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -9,7 +9,10 @@
 @import "blocks/posters.less";
 @import "blocks/fa-star.less";
 @import "blocks/film.less";
-
+@import "blocks/button.less";
+@import "blocks/choice.less";
+@import "blocks/schedule.less";
+@import "blocks/screen.less";
 
 @import "global/mixins.less";
 
