--- a/src/styles/blocks/poster-card.less
+++ b/src/styles/blocks/poster-card.less
@@ -23,12 +23,11 @@
         margin: 0 auto;
             display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
     }
     
     &__description-img{
-        border-radius: 8px;
+        bottom: 0;        border-radius: 8px;
         position: relative;
         display: flex;
         margin-left: auto;
@@ -38,8 +37,7 @@
         justify-content: center;
         background-color: white;
         margin-top: -45px;
-        margin-bottom: 50px;
-
+        margin-bottom: 30px;
         font-family: @font1;
         font-weight: 500;
         font-size: 14px;
@@ -47,7 +45,8 @@
         color: @black;
     }
     &__title{
-
+margin-top: 10px;
+margin-bottom: 0;
         font-family: @font1;
         font-weight: 600;
         font-size: 20px;
@@ -71,6 +70,7 @@
         font-size: 14px;
         line-height: 20px;
         color: @gray;
+        margin-bottom: 20px;
     }
 
     &__btn{
