--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -13,6 +13,10 @@
 @import "blocks/choice.less";
 @import "blocks/schedule.less";
 @import "blocks/screen.less";
+@import "blocks/pp.less";
+
+
+
 
 @import "global/mixins.less";
 
