--- a/src/styles/blocks/poster-card.less
+++ b/src/styles/blocks/poster-card.less
@@ -6,6 +6,7 @@
 
     &__link {
         text-decoration: none;
+        margin-bottom: 20px;
 
     }
 
@@ -25,6 +26,7 @@
         margin: 0 auto;
         display: flex;
         flex-direction: column;
+        margin-bottom: 30px;
 
     }
 
