--- a/src/styles/blocks/pp.less
+++ b/src/styles/blocks/pp.less
@@ -1,5 +1,5 @@
 .pp{
-// display: none;
+display: none;
 width: 544px;
 height: 640px;
 background-color: @white;
@@ -8,7 +8,18 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 border-radius: 20px;
+z-index: 1;
 
+// &__page{
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     opacity: 0.3;
+//     background-color: @black;
+
+// }
 
 
 
